s1-fw/t1/mylib/testout.txt
   Compiling mylib v0.1.0 (/home/vuos/code/p1/s1-fw/t1/mylib)
error[E0425]: cannot find function, tuple struct or tuple variant `Json` in this scope
  --> tests/integration.rs:32:68
   |
32 |     app = app.route("/openapi.json", axum::routing::get(|| async { Json(generate_openapi(&schemas)) }));
   |                                                                    ^^^^ not found in this scope
   |
help: consider importing this tuple struct
   |
1  + use axum::Json;
   |

error[E0425]: cannot find function, tuple struct or tuple variant `Json` in this scope
  --> tests/integration.rs:93:68
   |
93 |     app = app.route("/openapi.json", axum::routing::get(|| async { Json(generate_openapi(&schemas)) }));
   |                                                                    ^^^^ not found in this scope
   |
help: consider importing this tuple struct
   |
1  + use axum::Json;
   |

error[E0425]: cannot find function, tuple struct or tuple variant `Json` in this scope
   --> tests/integration.rs:147:68
    |
147 |     app = app.route("/openapi.json", axum::routing::get(|| async { Json(generate_openapi(&schemas)) }));
    |                                                                    ^^^^ not found in this scope
    |
help: consider importing this tuple struct
    |
1   + use axum::Json;
    |

error[E0603]: struct `AppState` is private
  --> tests/integration.rs:5:20
   |
5  | use mylib::{mylib, AppState, get_schemas, generate_openapi, create_table_router};
   |                    ^^^^^^^^ private struct
   |
note: the struct `AppState` is defined here
  --> /home/vuos/code/p1/s1-fw/t1/mylib/src/lib.rs:29:1
   |
29 | struct AppState {
   | ^^^^^^^^^^^^^^^

error[E0603]: function `get_schemas` is private
  --> tests/integration.rs:5:30
   |
5  | use mylib::{mylib, AppState, get_schemas, generate_openapi, create_table_router};
   |                              ^^^^^^^^^^^ private function
   |
note: the function `get_schemas` is defined here
  --> /home/vuos/code/p1/s1-fw/t1/mylib/src/lib.rs:68:1
   |
68 | fn get_schemas(conn: &Arc<Mutex<Connection>>) -> anyhow::Result<Vec<TableSchema>> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0603]: function `generate_openapi` is private
   --> tests/integration.rs:5:43
    |
5   | use mylib::{mylib, AppState, get_schemas, generate_openapi, create_table_router};
    |                                           ^^^^^^^^^^^^^^^^ private function
    |
note: the function `generate_openapi` is defined here
   --> /home/vuos/code/p1/s1-fw/t1/mylib/src/lib.rs:325:1
    |
325 | fn generate_openapi(schemas: &[TableSchema]) -> Value {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0603]: function `create_table_router` is private
   --> tests/integration.rs:5:61
    |
5   | use mylib::{mylib, AppState, get_schemas, generate_openapi, create_table_router};
    |                                                             ^^^^^^^^^^^^^^^^^^^ private function
    |
note: the function `create_table_router` is defined here
   --> /home/vuos/code/p1/s1-fw/t1/mylib/src/lib.rs:117:1
    |
117 | fn create_table_router(schema: &TableSchema) -> Router<AppState> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `mylib`
 --> tests/integration.rs:5:13
  |
5 | use mylib::{mylib, AppState, get_schemas, generate_openapi, create_table_router};
  |             ^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

Some errors have detailed explanations: E0425, E0603.
For more information about an error, try `rustc --explain E0425`.
warning: `mylib` (test "integration") generated 1 warning
error: could not compile `mylib` (test "integration") due to 7 previous errors; 1 warning emitted
